# kajilab

./: .gitignore  .textlintrc  README.md  bun.lockb  package.json
weekly/: pyproject.toml
weekly/src/0411-0416/: main.py  progress.md
weekly/src/0411-0416/assets/: 2.csv
weekly/src/0417-0423/: progress.md
weekly/src/b1/0416/: progress.md
weekly/src/b1/0416/assets/: 1.csv
weekly/src/b1/0423/: main.py  progress.md
weekly/src/b1/0507/: progress.md
weekly/src/b1/0514/: progress.md
weekly/src/b1/0521/: progress.md
weekly/src/b1/0528/: progress.md
weekly/src/b1/0604/: progress.md
weekly/src/b1/0611/: progress.md
weekly/src/b1/0917/: progress.md
